--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>My Website</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='static/style.css'>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='smile.ico') }}">
     <script src='static/script.js'></script>
 </head>
 <body>
